--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "cookie": "^1.0.2",
     "cookies-next": "^5.1.0",
     "date-fns": "latest",
+    "dompurify": "^3.2.6",
     "embla-carousel-react": "8.5.1",
     "ethers": "latest",
     "input-otp": "1.4.1",
